@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Make SQLite work without the sqlite3 binary
+
 0.000006  2018-01-29 12:59:54-08:00 America/Los_Angeles
 
     - Fix for postgres with alternate hardcoded port numbers
